tests/NormalTests/paczka1/fuzzy1/12249787.err
Error in line 6: 7vGdGZ911Y S595 61,7
Error in line 8: whqLP S142 13,0
Error in line 15: 7vGdGZ911Y S679 60,0
Error in line 20: whqLP S595 9,1
Error in line 22: 7vGdGZ911Y S595 80,0
